Add postgres variables

--- a/environment.env
+++ b/environment.env
@@ -5,3 +5,9 @@ VALHALLA_JSON_TEMPLATE=/conf/valhalla.json
 VALHALLA_TILE_DIR=/temp/valhalla/tiles
 VALHALLA_TILE_EXTRACT=/data/valhalla/state_data.tar
 VALHALLA_TILE_TAR=/data/valhalla/state_data.tar
+
+PGUSER=osm
+PGPASSWORD=osm
+PGHOST=postgres
+PGPORT=5432
+PGDATABASE=osm
