Support postgres connections

--- a/notebook/Dockerfile
+++ b/notebook/Dockerfile
@@ -3,4 +3,6 @@ MAINTAINER jimmyrocks
 
 # Add custom libraries
 RUN pip install --upgrade pip && \
-    pip install ipyleaflet
+    pip install \
+      ipyleaflet \
+      psycopg2-binary
