Add geopandas tools and use custom image instead of the base notebook one

--- a/notebook/Dockerfile
+++ b/notebook/Dockerfile
@@ -1,8 +1,17 @@
-FROM jupyter/base-notebook
+FROM python:stretch
 MAINTAINER jimmyrocks
 
+RUN apt-get update -qq && \
+    apt-get install -y --no-install-recommends \
+      python3-rtree \
+    && rm -rf /var/lib/apt/lists/*
+
 # Add custom libraries
-RUN pip install --upgrade pip && \
-    pip install \
+RUN python3 -m pip install --upgrade pip &&\
+    python3 -m pip install \
+      jupyter \
       ipyleaflet \
-      psycopg2-binary
+      psycopg2-binary \
+      rtree \
+      requests \
+      geopandas
