--- a/valhalla/Dockerfile
+++ b/valhalla/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 MAINTAINER jimmyrocks
 
 # Allow for the add-apt-repository function
@@ -15,7 +15,6 @@ RUN apt-get update -qq && \
       curl \
       g++ \
       gcc \
-      gettext-base \
       git \
       jq \
       lcov \
@@ -23,15 +22,12 @@ RUN apt-get update -qq && \
       libboost-all-dev \
       libcurl4-openssl-dev \
       liblz4-dev \
-      libprime-server0.6.3-dev \
       libprotobuf-dev \
       libtool \
       make \
       nodejs \
-      npm \
       osmctools \
       pkg-config \
-      prime-server0.6.3-bin \
       protobuf-compiler \
       vim-common \
       zlib1g-dev \
@@ -45,16 +41,35 @@ RUN apt-get update -qq && \
       liblua5.2-dev \
       libspatialite-dev \
       libsqlite3-dev \
-      libsqlite3-mod-spatialite \
-      lua5.2\
-      python-all-dev \
+      lua5.2 \
       wget \
     && rm -rf /var/lib/apt/lists/*
 
 # Install the latest stable version of nodejs
-RUN npm install -g n && \
-    n stable && \
-    ln -sf $(n bin stable) /usr/bin/node
+# RUN npm install -g n && \
+    # n stable && \
+    # ln -sf $(n bin stable) /usr/bin/node
+#if you plan to compile with node bindings, run
+
+
+ENV NODE_VERSION=10.15.0
+ENV NVM_DIR=$HOME/.nvm
+ENV NODEJS_INCLUDE_DIRS=$NVM_DIR/versions/node/v$NODE_VERSION/include
+RUN mkdir -p $NODEJS_INCLUDE_DIRS
+
+RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.34.0/install.sh | bash
+
+RUN [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+RUN . $NVM_DIR/nvm.sh \
+    && nvm install $NODE_VERSION \
+    && nvm alias default $NODE_VERSION \
+    && nvm use default
+
+ENV NODE_PATH $NVM_DIR/versions/node/v$NODE_VERSION/lib/node_modules
+ENV PATH      $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
+RUN ln -s $NVM_DIR/versions/node/v$NODE_VERSION/include/node/node.h /usr/include/node.h
+RUN ln -s $NVM_DIR/versions/node/v$NODE_VERSION/include/node/uv.h /usr/include/uv.h
+RUN ln -s $NVM_DIR/versions/node/v$NODE_VERSION/include/node/v8.h /usr/include/v8.h
 
 # Then clone and build prime_server.
 # After getting the dependencies install it with:
@@ -65,7 +80,7 @@ RUN git clone https://github.com/valhalla/valhalla.git && \
     npm install && \
     mkdir build && \
     cd build && \
-    cmake .. -DCMAKE_BUILD_TYPE=Release -DENABLE_PYTHON_BINDINGS=On && \
+    cmake .. -DCMAKE_BUILD_TYPE=Release -DENABLE_PYTHON_BINDINGS=On -DENABLE_SERVICES=OFF && \
     make -j$(nproc) && \
     make install
 
